# video-clipper

./: .claudeignore  .gitignore  CLAUDE.md  README.md  creds.example.json  pyproject.toml  requirements-gpu.txt  requirements.txt
.claude/agents/: code-reviewer.md
.github/workflows/: build-release.yml
docs/: CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_WORKFLOW.md  MODULE_MAP.md  PARALLEL_BUILD_PLAN.md  TGF_INTEGRATION.md
docs/PROMPTS/: stage-1-scaffolding.md  stage-1.1-restructure.md  stage-2a-monitor.md  stage-2b-bot-moderation.md  stage-2c-downloader.md
scripts/: dev.command  generate_session.py  test_subtitles.py
src/slicr/: __init__.py  __main__.py  __main_gui__.py  config.py  updater.py
src/slicr/bot/: __init__.py  handlers.py  moderation.py
src/slicr/database/: __init__.py  migrations.py  models.py
src/slicr/gpu/: guard.py  monitor.py
src/slicr/gui/: __init__.py  app.py  update_dialog.py  workers.py
src/slicr/pipeline/: downloader.py  editor.py  monitor.py  orchestrator.py  publisher.py  selector.py  transcriber.py
src/slicr/services/: __init__.py  claude_client.py  processor.py  telegram_client.py  transcription.py  vk_clips.py
src/slicr/utils/: subtitles.py  video.py
src/video_clipper/: __init__.py  __main__.py  config.py  constants.py
src/video_clipper/bot/: __init__.py  handlers.py  keyboards.py  moderation.py
src/video_clipper/database/: __init__.py  connection.py  migrations.py  models.py
tests/: conftest.py  test_config.py  test_database.py  test_stage2a.py  test_stage2b.py  test_stage2c.py
(+19 files in other folders)
